--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jembi.openhim</groupId>
-	<artifactId>openhim</artifactId>
+	<artifactId>facilitymediator</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>mule</packaging>
-	<name>OpenHIM</name>
+	<name>Facility Mediator</name>
 	<description>OpenHIM is a open source Health Information Mediator built to facilitate interoperability between disparate Health Information Systems.</description>
 	<url>http://openhim.org/</url>
 
