--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>facilityMediator</name>
+	<name>openhim-resmap-facility-adapter</name>
 	<comment></comment>
 	<projects>
 	</projects>
