Configured integration tests, using single port for all facility endpoints now

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue Jul 23 13:39:00 SAST 2013
+#Mon Sep 02 18:00:25 SAST 2013
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=getfacility-denormalization-mockserviceprovider.xml,getfacility-denormalization-resourcemap.xml,getfacility-denormalization.xml,getfacility-normalization-generic.xml,getfacility-orchestration.xml,queryfacilities-denormalization-mockserviceprovider.xml,queryfacilities-denormalization-resoursemap.xml,queryfacilities-denormalization.xml,queryfacilities-normalization-generic.xml,queryfacilities-orchestration.xml
 domain=default
+config.resources=getfacility-denormalization-mockserviceprovider.xml,getfacility-denormalization-resourcemap.xml,getfacility-denormalization.xml,getfacility-normalization-generic.xml,getfacility-orchestration.xml,http-interface.xml,queryfacilities-denormalization-mockserviceprovider.xml,queryfacilities-denormalization-resoursemap.xml,queryfacilities-denormalization.xml,queryfacilities-normalization-generic.xml,queryfacilities-orchestration.xml
