--- a/src/main/resources/facilityMediator.properties
+++ b/src/main/resources/facilityMediator.properties
@@ -1,16 +1,6 @@
 # === Facility Mediator properties file ===
 
-# == Get Facility HTTP Endpoints==
-
-gf.host=localhost
-gf.port=8180
-gf.path=ws/rest/v1/facility
-
-# == Query Facilities HTTP Endpoints==
-
-qf.host=localhost
-qf.port=8181
-qf.path=ws/rest/v1/facilities
+fm.port = 8082
 
 # == Facility Registry ==
 # Mock
